--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "food-social",
   "main": "./client/index.js",
   "scripts": {
-    "dev": "concurrently \"NODE_ENV=development nodemon server/server.js\" \"NODE_ENV=development webpack serve --open --hot\"",
-    "start": "node ./server/server.js",
-    "build": "webpack --mode production"
+    "dev": "concurrently \"NODE_ENV=development webpack-dev-server --open --hot\" \"NODE_ENV=development nodemon server/server.js\"",
+    "start": "cross-env NODE_ENV=production node server/server.js",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "image-webpack-loader": "^8.1.0",
