--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "food-social",
   "main": "./client/index.js",
   "scripts": {
-    "dev": "concurrently \"NODE_ENV=development webpack-dev-server --open --hot\" \"NODE_ENV=development nodemon server/server.js\"",
+    "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot\" \"cross-env NODE_ENV=development nodemon server/server.js\"",
     "start": "cross-env NODE_ENV=production node server/server.js",
     "build": "cross-env NODE_ENV=production webpack"
   },
