--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/CTRI12-tassled-wobbegong/food-social#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
